--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "vue/multi-word-component-names": [
+    "error",
+    {
+      "ignores": []
+    }
+  ],
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -15,10 +21,12 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   },
   "eslintConfig": {
     "root": true,
